# msdp-book

./: .buildinfo  .gitignore  README.md  _config.yml  _toc.yml  ch1.ch10.json  ch1.ch11g.json  ch1.ch12.json  ch1.ch13.json  ch1.ch14.json  ch1.ch150-gitlab-auth-https.json  ch1.ch151-gitlab-https.json  ch12.html  ch12.md  ch14.html  ch15.md  ch2.ch20.json  ch2.ch21.json  ch2.ch22.json  ch3.ch30.json  ch3.ch31.json  ch3.portfolio.json  ch4.ch40.json  ch4.ch41.json  ch4.ch42.json  ch4.ch43.json  ch5.ch50.json  ch5.ch51-gitlab.json  ch5.ch52-gitlab.json  ch5.ch53-gitlab.json  config.json  genindex.html  guide-for-intructor.md  home  index.html  index.json  intro.html  intro.md  myst.search.json  myst.xref.json  (+8 more)
_sources/: ch11.md  intro.md
ch1/: ch10.html  ch10.md  ch11.html  ch11.md  ch11g.html  ch12.html  ch12.md  ch13.html  ch13.md  ch14.html  ch14.md  ch15.md  ch150_gitlab_auth_https.html  ch150_gitlab_auth_https.md  ch151_github_https.md  ch151_gitlab_https.html  ch151_gitlab_https.md  ch15_github.md  ch15_gitlab.html  ch15_gitlab.md  file1.txt  file2.txt  gitlab_auth.md  ssh_gitlab.html  ssh_gitlab.md
ch2/: ch20.html  ch20.md  ch21.html  ch21.md  ch22.html  ch22.md  ch23.md  expense_splitter.py  expense_splitter_try_except.py  expense_splitter_with_functions.py
ch3/: ch30.html  ch30.md  ch31.html  ch31.md  ch31bis.html  ch32.md  mystock.ipynb  portfolio.html  portfolio.ipynb  rabbit-hole.html  rabbit-hole.md
ch4/: ch40.html  ch40.md  ch41-sdd-tdd.md  ch41.html  ch41.md  ch42-artifacts.md  ch42.html  ch42.md  ch43.html  ch43.md  failure_modes_table.html
(+281 files in other folders)
